# Computer-Vision-Course

1.Gradient/cpp/: CMakeLists.txt
1.Gradient/cpp/src/: main.cpp
1.Gradient/python/: pyproject.toml
1.Gradient/python/gradient/: main.py
